# showimg

./: Cargo.toml  README.md  TODO.txt
src/: display.wgsl  downsample.wgsl  main.rs  math.rs  preprocess.wgsl  ratio.rs
