[package]
name = "viewimg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
log = "0.4.21"
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color"] }

winit = "0.30.0"
wgpu = "0.20.0"
raw-window-handle = "0.6.1"
image = "0.25.1"
pollster = "0.3.0"
bytemuck = { version = "1.0.0", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3
