[package]
name = "showimg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
log = "0.4.21"
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color"] }
rfd = "0.14.1"

winit = "0.30.0"
wgpu = "0.20.0"
raw-window-handle = "0.6.1"
image = "0.25.1"
pollster = "0.3.0"
bytemuck = { version = "1.0.0", features = ["derive"] }

# cfg predicate copied from winit
[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
x11-dl = "2.19.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
